[gd_scene load_steps=12 format=2]

[ext_resource path="res://Levels/Level Resources/world_tiles/world_tiles.tscn" type="PackedScene" id=1]
[ext_resource path="res://Levels/Level Resources/background/background.tscn" type="PackedScene" id=2]
[ext_resource path="res://Levels/Level Resources/camera/camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/star_counter/star_counter.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/pause_menu/pause_menu.tscn" type="PackedScene" id=5]
[ext_resource path="res://Levels/hub/hub.gd" type="Script" id=6]
[ext_resource path="res://Levels/Level Resources/scene_batcher/prop_placer/prop_placer.tscn" type="PackedScene" id=7]
[ext_resource path="res://Levels/Level Resources/background_tiles/background_tiles.tscn" type="PackedScene" id=8]
[ext_resource path="res://Levels/level/leaf.png" type="Texture" id=9]
[ext_resource path="res://UI/transition.tscn" type="PackedScene" id=10]
[ext_resource path="res://UI/fps/fps.tscn" type="PackedScene" id=11]

[node name="hub" type="Node2D"]
script = ExtResource( 6 )

[node name="background" parent="." instance=ExtResource( 2 )]

[node name="ambient_lighting" type="CanvasModulate" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="StarCounter" parent="CanvasLayer" instance=ExtResource( 4 )]

[node name="Pause_Menu" parent="CanvasLayer" instance=ExtResource( 5 )]

[node name="transition" parent="CanvasLayer" instance=ExtResource( 10 )]

[node name="fps" parent="CanvasLayer" instance=ExtResource( 11 )]

[node name="prop_placer" parent="." instance=ExtResource( 7 )]
z_index = 201

[node name="YSort" type="YSort" parent="."]
z_index = 99

[node name="WorldTiles" parent="YSort" instance=ExtResource( 1 )]

[node name="background_tiles" parent="YSort" instance=ExtResource( 8 )]

[node name="Camera" parent="." instance=ExtResource( 3 )]

[node name="particle_anchor" type="Node2D" parent="."]

[node name="particles" type="Particles2D" parent="particle_anchor"]
z_index = 999
amount = 100
lifetime = 18.0
preprocess = 15.0
visibility_rect = Rect2( -9900, -9900, 19800, 19800 )
local_coords = false
texture = ExtResource( 9 )

[node name="Timer" type="Timer" parent="."]
wait_time = 9999.0
autostart = true

[connection signal="tree_exiting" from="." to="." method="_on_hub_tree_exiting"]
